@@ -1,6 +1,9 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-694 Setting configuration in GiraphConfiguration causes 
+  non thread safe copies (aching)
+
   GIRAPH-683: Jython for Computation (nitay)
 
   GIRAPH-673: Input superstep should support aggregators like any 
